--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <HEAD>
 <TITLE>bruh</TITLE>
 </HEAD>
-<BODY>
-	<P>funny moment </P>
-	<A HREF="https://www.youtube.com/watch?v=PUoPGQHBO0U">
-<BUTTON TYPE="BUTTON">--click here for funny moment--</BUTTON>
+<BODY ALIGN="CENTER">
+	<P>gusto mo bang lumaki ang iyong ari ng mahigit 3 inches?</P>
+	<A HREF="https://www.youtube.com/watch?v=_oVm2jtv6q8">
+<BUTTON TYPE="BUTTON">click here!</BUTTON>
 </A>
 </BODY>
 </HTML>
